package kodenix.mastermind.models;

public class Game {
    public Game() {}
}
