package kodenix.mastermind.views;

import kodenix.mastermind.models.Game;

public class View {
    Game game;
    
    public View(Game game) {
        this.game = game;
    }
    
    public void init() {
        
    }

}
