@startuml package-mastermind
title Package kodenix.mastermind 

package kodenix.mastermind {
    class MasterMind {
        -game: Game
        -view: View 
        +play(): void
        +main(:String[]): void
    }
}

package kodenix.mastermind.models {
    class Game {}
}

package kodenix.mastermind.views {
    class View {}
}

MasterMind *--> View
MasterMind *--> Game
View .right.> Game


@enduml